--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "str-includes",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
-  "scripts": {
+    "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/meet-moon/str-includes.git"
   },
   "keywords": [
-    "str-includes"
+    "string","includes","find","search"
   ],
   "author": "",
   "license": "ISC",
