--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.1",
   "description": "",
   "main": "index.js",
-    "scripts": {
+  "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -11,12 +11,18 @@
     "url": "git+https://github.com/meet-moon/str-includes.git"
   },
   "keywords": [
-    "string","includes","find","search"
+    "string",
+    "includes",
+    "find",
+    "search"
   ],
   "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/meet-moon/str-includes/issues"
   },
-  "homepage": "https://github.com/meet-moon/str-includes#readme"
+  "homepage": "https://github.com/meet-moon/str-includes#readme",
+  "devDependencies": {
+    "@babel/preset-react": "^7.22.5"
+  }
 }
