--- a/package.json
+++ b/package.json
@@ -21,8 +21,5 @@
   "bugs": {
     "url": "https://github.com/meet-moon/str-includes/issues"
   },
-  "homepage": "https://github.com/meet-moon/str-includes#readme",
-  "devDependencies": {
-    "@babel/preset-react": "^7.22.5"
-  }
+  "homepage": "https://github.com/meet-moon/str-includes#readme"
 }
