--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/meet-moon/str-includes/issues"
   },
-  "homepage": "https://github.com/meet-moon/str-includes#readme"
+  "homepage": "https://github.com/meet-moon/str-includes#readme",
+  "devDependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.22.5",
+    "@babel/preset-react": "^7.22.5"
+  }
 }
