--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
   },
   "homepage": "https://github.com/meet-moon/str-includes#readme",
   "devDependencies": {
-    "@babel/plugin-transform-react-jsx": "^7.22.5",
-    "@babel/preset-react": "^7.22.5"
+    "@babel/cli": "^7.22.5",
+    "@babel/core": "^7.22.5",
+    "@babel/preset-env": "^7.22.5"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.12.1"
   }
 }
