--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "1.0.1",
   "description": "",
   "main": "index.js",
+  "babel": {
+    "presets": [
+      "@babel/preset-react"
+    ]
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files"
   },
   "repository": {
     "type": "git",
@@ -24,10 +30,6 @@
   "homepage": "https://github.com/meet-moon/str-includes#readme",
   "devDependencies": {
     "@babel/cli": "^7.22.5",
-    "@babel/core": "^7.22.5",
-    "@babel/preset-env": "^7.22.5"
-  },
-  "dependencies": {
-    "@babel/polyfill": "^7.12.1"
+    "@babel/preset-react": "^7.22.5"
   }
 }
