--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "str-includes",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf dist && babel lib --out-dir dist --copy-files"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
