--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "homepage": "https://github.com/meet-moon/str-includes#readme",
   "devDependencies": {
     "@babel/preset-react": "^7.22.5"
+  },
+  "dependencies": {
+    "@babel/plugin-syntax-jsx": "^7.22.5"
   }
 }
