--- a/package.json
+++ b/package.json
@@ -26,12 +26,9 @@
   "devDependencies": {
     "@babel/cli": "^7.22.5",
     "@babel/core": "^7.22.5",
-    "@babel/preset-env": "^7.22.5",
-    "@babel/preset-react": "^7.22.5"
+    "@babel/preset-env": "^7.22.5"
   },
   "dependencies": {
-    "@babel/plugin-syntax-jsx": "^7.22.5",
-    "@babel/polyfill": "^7.12.1",
-    "react": "^18.2.0"
+    "@babel/polyfill": "^7.12.1"
   }
 }
