--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@babel/preset-react": "^7.22.5",
+    "prop-types": "^15.8.1",
     "tailwindcss": "^3.3.2"
   }
 }
