--- a/package.json
+++ b/package.json
@@ -1,36 +1,23 @@
 {
-  "name": "str-includes",
-  "version": "1.0.4",
+  "name": "ts-component",
+  "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/esm/index.js",
+  "types": "./dist/esm/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf dist && NODE_ENV=production babel lib --out-dir dist --copy-files"
+    "build": "tsc && tsc --module commonjs --outDir dist/cjs",
+    "build:esm": "tsc",
+    "build:cjs": "tsc --module commonjs --outDir dist/cjs"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/meet-moon/str-includes.git"
-  },
-  "keywords": [
-    "string",
-    "includes",
-    "find",
-    "search"
-  ],
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/meet-moon/str-includes/issues"
-  },
-  "homepage": "https://github.com/meet-moon/str-includes#readme",
   "devDependencies": {
-    "@babel/cli": "^7.22.5",
-    "@babel/core": "^7.22.5",
-    "@babel/preset-env": "^7.22.5"
-  },
-  "dependencies": {
-    "@babel/preset-react": "^7.22.5",
-    "prop-types": "^15.8.1",
-    "tailwindcss": "^3.3.2"
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "typescript": "^5.1.6"
   }
 }
